[package]
name = "solana-custom-token"
version = "0.0.1-BETA"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
solana-program = "1.11.3"
borsh = "0.9.3"
byteorder = "1.4.3"
derive_more = "0.99.17"

[dev-dependencies]
solana-program-test = "1.9.1"
solana-sdk = "1.9.1"
solana-validator = "1.9.1"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
